kubernetes/smart-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-home
  labels:
    name: smart-home
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
